// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test fixed-size-list component props > test dynamic-list data 0 1`] = `""`;

exports[`test fixed-size-list component props > test fixed-size-list cache 1`] = `
"<div data-v-a7e82dad="" class="ldk-virtual-list-container ldk-fixed-size-list" style="width: 100%; height: 600px;">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 1550000px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="0" style="top: 0px; height: 155px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="1" style="top: 155px; height: 155px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="2" style="top: 310px; height: 155px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="3" style="top: 465px; height: 155px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="4" style="top: 620px; height: 155px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="5" style="top: 775px; height: 155px;"></div>
  </div>
</div>"
`;

exports[`test fixed-size-list component props > test fixed-size-list itemClass 1`] = `
"<div data-v-a7e82dad="" class="ldk-virtual-list-container ldk-fixed-size-list" style="width: 100%; height: 300px;">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 700000px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item custom-item" data-index="0" style="top: 0px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item custom-item" data-index="1" style="top: 70px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item custom-item" data-index="2" style="top: 140px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item custom-item" data-index="3" style="top: 210px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item custom-item" data-index="4" style="top: 280px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item custom-item" data-index="5" style="top: 350px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item custom-item" data-index="6" style="top: 420px; height: 70px;"></div>
  </div>
</div>"
`;

exports[`test fixed-size-list component props > test fixed-size-list itemSize 1`] = `
"<div data-v-a7e82dad="" class="ldk-virtual-list-container ldk-fixed-size-list" style="width: 100%; height: 300px;">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 500000px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="0" style="top: 0px; height: 50px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="1" style="top: 50px; height: 50px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="2" style="top: 100px; height: 50px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="3" style="top: 150px; height: 50px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="4" style="top: 200px; height: 50px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="5" style="top: 250px; height: 50px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="6" style="top: 300px; height: 50px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="7" style="top: 350px; height: 50px;"></div>
  </div>
</div>"
`;

exports[`test fixed-size-list component props > test fixed-size-list width and height 1`] = `
"<div data-v-a7e82dad="" class="ldk-virtual-list-container ldk-fixed-size-list" style="width: 300px; height: 600px;">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 700000px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="0" style="top: 0px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="1" style="top: 70px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="2" style="top: 140px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="3" style="top: 210px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="4" style="top: 280px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="5" style="top: 350px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="6" style="top: 420px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="7" style="top: 490px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="8" style="top: 560px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="9" style="top: 630px; height: 70px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="10" style="top: 700px; height: 70px;"></div>
  </div>
</div>"
`;

exports[`test fixed-size-list event > test fixed-size-list onload 1`] = `
"<div data-v-a7e82dad="" style="width: 100%; height: 600px;" class="ldk-virtual-list-container ldk-fixed-size-list ldk-virtual-list-scrolling">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 750px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="0" style="top: 0px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="1" style="top: 150px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="2" style="top: 300px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="3" style="top: 450px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="4" style="top: 600px; height: 150px;"></div>
  </div>
</div>"
`;

exports[`test fixed-size-list scroll > test fixed-size-list scroll cache 1`] = `
"<div data-v-a7e82dad="" class="ldk-virtual-list-container ldk-fixed-size-list" style="width: 100%; height: 600px;">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 3000px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="0" style="top: 0px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="1" style="top: 150px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="2" style="top: 300px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="3" style="top: 450px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="4" style="top: 600px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="5" style="top: 750px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="6" style="top: 900px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="7" style="top: 1050px; height: 150px;"></div>
  </div>
</div>"
`;

exports[`test fixed-size-list scroll > test fixed-size-list scroll cache 2`] = `
"<div data-v-a7e82dad="" style="width: 100%; height: 600px;" class="ldk-virtual-list-container ldk-fixed-size-list ldk-virtual-list-scrolling">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 3000px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="0" style="top: 0px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="1" style="top: 150px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="2" style="top: 300px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="3" style="top: 450px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="4" style="top: 600px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="5" style="top: 750px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="6" style="top: 900px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="7" style="top: 1050px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="8" style="top: 1200px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="9" style="top: 1350px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="10" style="top: 1500px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="11" style="top: 1650px; height: 150px;"></div>
  </div>
</div>"
`;

exports[`test fixed-size-list scroll > test fixed-size-list scroll cache 3`] = `
"<div data-v-a7e82dad="" style="width: 100%; height: 600px;" class="ldk-virtual-list-container ldk-fixed-size-list ldk-virtual-list-scrolling">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 3000px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="1" style="top: 150px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="2" style="top: 300px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="3" style="top: 450px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="4" style="top: 600px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="5" style="top: 750px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="6" style="top: 900px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="7" style="top: 1050px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="8" style="top: 1200px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="9" style="top: 1350px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="10" style="top: 1500px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="11" style="top: 1650px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="12" style="top: 1800px; height: 150px;"></div>
  </div>
</div>"
`;

exports[`test fixed-size-list scroll > test fixed-size-list scroll distance 1`] = `
"<div data-v-a7e82dad="" style="width: 100%; height: 600px;" class="ldk-virtual-list-container ldk-fixed-size-list ldk-virtual-list-scrolling">
  <div data-v-a7e82dad="" class="ldk-virtual-list" style="width: 100%; height: 750px;">
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="0" style="top: 0px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="1" style="top: 150px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="2" style="top: 300px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="3" style="top: 450px; height: 150px;"></div>
    <div data-v-e96bb3d2="" data-v-a7e82dad="" class="ldk-virtual-list-item" data-index="4" style="top: 600px; height: 150px;"></div>
  </div>
</div>"
`;
